# Cat_Happy

./: .gitignore  README.md  close TextInputHost.bat
HappyCat/HappyCat/: .gitignore
HappyCat/HappyCat/.utmp/RelWithDebInfo/4a3225b2/: hash_key.txt
HappyCat/HappyCat/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
HappyCat/HappyCat/Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
HappyCat/HappyCat/Assets/AddressableAssetsData/AssetGroups/: Default Local Group.asset  Localization-Assets-Shared.asset  Localization-Locales.asset  Localization-String-Tables-English (en).asset  Localization-String-Tables-Korean (ko).asset  (+1 more)
HappyCat/HappyCat/Assets/Resources/: UGSettingObject.asset
HappyCat/HappyCat/Assets/Scenes/: GameScene.unity  LoginScene.unity  MainScene.unity  MainUIScene.unity  SampleScene.unity  test.unity
HappyCat/HappyCat/Assets/Script/: LoginPage.cs  TestScript.cs
HappyCat/HappyCat/Assets/Settings/: Mobile_RPAsset.asset  PC_RPAsset.asset  UniversalRenderPipelineGlobalSettings.asset
HappyCat/HappyCat/Keystore/: HappyCatKeystore.keystore  password.txt
HappyCat/HappyCat/ProjectSettings/: AndroidResolverDependencies.xml  EditorBuildSettings.asset  GooglePlayGameSettings.txt  ProjectSettings.asset  TagManager.asset
otium-server/: CMakeLists.txt  Dockerfile  openapi.yaml
otium-server/crow/include/crow/: json.h
otium-server/include/: login_handler.h  register.h  user_db.h  users_handler.hpp
otium-server/src/: db_test.cpp  login_handler.cpp  main.cpp  register.cpp  user_db.cpp  users_handler.cpp
(+184 files in other folders)
